# requests

./: .gitignore  .travis.yml  AsyncRequest.hpp  CMakeLists.txt  Context.hpp  Exception.hpp  Makefile  README.md  Request.hpp  Requests.hpp  Response.hpp  Url.hpp  Utils.hpp  main.cpp
examples/: AsyncRequest.cpp  CMakeLists.txt  SyncRequest.cpp  UtilsTest.cpp  main.cpp
include/requests/: AsyncRequest.hpp  Callback.hpp  Context.hpp  Exception.hpp  Request.hpp
requests/: AsyncRequest.cpp  AsyncRequest.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Exception.cpp  Request.cpp  Response.cpp  Response.hpp  Url.cpp  Utils.cpp
src/: AsyncRequest.cpp  AsyncRequest.hpp  Callback.hpp  Exception.hpp  Request.hpp  Response.cpp  Url.cpp  Url.hpp  Utils.cpp  Utils.hpp
test/: CMakeLists.txt  UrlTests.cpp
