INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src)

ADD_EXECUTABLE(SyncRequest SyncRequest.cpp)

TARGET_LINK_LIBRARIES(SyncRequest requests ${Boost_SYSTEM_LIBRARY})

ADD_EXECUTABLE(AsyncRequest AsyncRequest.cpp)

TARGET_LINK_LIBRARIES(AsyncRequest requests ${Boost_SYSTEM_LIBRARY})
